# osu-cli

./: Cargo.toml  README.md
src/: api.rs  config.rs  main.rs  models.rs  output.rs  scores.rs  stats.rs
