[package]
name = "osu-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rosu-v2 = "0.11.0"

confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
# cli-table = "0.5.0"
comfy-table = "7.2.1"
async-trait = "0.1.80"
chrono = "0.4.38"
